<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ss"
    tools:context=".SportFragment"
    >

    <ScrollView
        android:layout_width="380dp"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="52dp"
        android:layout_centerHorizontal="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/ss"
            android:layout_marginTop="25dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/renk1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/egzersiz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/egzersiz"
                    android:textColor="@color/beyaz"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/kalori"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Klori"
                    android:textColor="@color/beyaz"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/dakika"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/dakka"
                    android:textColor="@color/beyaz"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/renk1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/egzersiztv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/beyaz"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/kaloritv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/beyaz"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/dakikatv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/beyaz"
                    android:textSize="20sp" />
            </LinearLayout>

            <Button
                android:id="@+id/gun1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/button"
                android:drawableRight="@drawable/p"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/gun1"
                android:textColor="@color/beyaz"

                android:textSize="20dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/gun2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/button"
                android:drawableRight="@drawable/t"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/gun2"
                android:textColor="@color/beyaz"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/gun3"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/button"
                android:drawableRight="@drawable/p"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"

                android:text="@string/gun3"
                android:textColor="@color/beyaz"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/gun4"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/button"
                android:drawableRight="@drawable/t"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/gun4"
                android:textColor="@color/beyaz"

                android:textSize="20dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/gun5"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/button"
                android:drawableRight="@drawable/p"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/gun5"
                android:textColor="@color/beyaz"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/gun6"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/button"
                android:drawableRight="@drawable/t"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/gun6"
                android:textColor="@color/beyaz"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/gun7"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/button"
                android:drawableRight="@drawable/p"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/gun7"
                android:textColor="@color/beyaz"
                android:textSize="20dp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>